# audio_sender

./: .gitignore  CMakeLists.txt  codec_changer  config.json
src/: codec.cpp  codec.h  json.h  jsoncpp.cpp  logger.h  main.cpp  md5.cpp  md5.h  rtp.cpp  rtp.h  udp.cpp  udp.h  utils.cpp  utils.h
